disabled camera button due to https not used

--- a/views/check-payment.ejs
+++ b/views/check-payment.ejs
@@ -34,7 +34,8 @@
             </div>
           </form>
         </div>
-        <div id="QRCodeInput" style="margin-top: 20px;">
+        
+        <!-- <div id="QRCodeInput" style="margin-top: 20px;">
           <button id="toggleButton" class="btn btn-primary">Toggle Video</button>
           <br>
           <video id="videoElement" autoplay style="width: 320px; height: 240px; margin-top: 10px; display: none;"></video>
@@ -79,7 +80,7 @@
               }
             });
           </script>
-        </div>
+        </div> -->
       </div>
     </div>
     <div id="PaymentDetails" style="margin-top: 25px;">
