fixed bug of submitting form without required data

--- a/views/add-payment-record.ejs
+++ b/views/add-payment-record.ejs
@@ -140,7 +140,7 @@
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text" id="basic-addon1">Pad Quantity</span>
-							<input type="number" class="form-control" id="padqty" name="padquantity" style="max-width: 130px;">
+							<input type="number" class="form-control" id="padqty" name="padquantity" style="max-width: 130px;" required>
 							<select class="form-select" id="padfrac" name="padfraction" style="max-width: 90px;">
 								<option value="0" selected>0</option>
 								<option value="1/4">1/4</option>
