Fixed bug of submitting form without required data

--- a/views/token-generation.ejs
+++ b/views/token-generation.ejs
@@ -36,8 +36,8 @@
 						<div class="input-group mb-3">
 							<span class="input-group-text" id="basic-addon1">Enter Patient Name</span>
 							<input type="text" class="form-control" id="PatientNameInput" name="TokenName" style="max-width: 500px;">
-							<select class="form-select" id="PatientTypeSelect" name="TokenType" style="max-width: 130px;">
-								<option selected>Select Type</option>
+							<select class="form-select" id="PatientTypeSelect" name="TokenType" style="max-width: 130px;" required>
+								<option value="" selected>Select Type</option>
 								<option value="Male">Male</option>
 								<option value="Female">Female</option>
 								<option value="Child">Child</option>
