--- a/views/print-handler.ejs
+++ b/views/print-handler.ejs
@@ -1,21 +1,24 @@
 <html>
   <head>
     <script>
+      function printDocument() {
+        const data = document.getElementById("print-data");
+        console.log(data);
+        const printmethod = data.getAttribute("data-printmethod");
+        const params = data.getAttribute("data-params");
+        const redirectURL = data.getAttribute("data-redirecturl");
+        var newPrintWindow = window.open("PrinterHandler://" + printmethod + "?" + params, "_blank");
+        setTimeout(() => {
+          window.location.href = redirectURL;
+        }, 3000);
+      }
     </script>
   </head>
   <body>
     <h3>Please wait. Printing....</h3>
     <div id="print-data" data-printmethod="<%= printmethod %>" data-params="<%= params %>" data-redirecturl="<%= redirectURL %>"></div>
     <script>
-      const data = document.getElementById("print-data");
-      console.log(data);
-      const printmethod = data.getAttribute("data-printmethod");
-      const params = data.getAttribute("data-params");
-      const redirectURL = data.getAttribute("data-redirecturl");
-      setTimeout(() => {
-        window.open("PrinterHandler://" + printmethod + "?" + params, "_blank");
-        window.location.href = redirectURL;
-      }, 1000);
+      window.onload = printDocument;
     </script>
   </body>
 </html>
